@@ -1282,166 +1282,6 @@ static NSURL* uniqueURLWithRelativePart(NSString *relativePart)
     return [self _dragImageForURL:urlString withLabel:label];
 }
 
-- (BOOL)_startDraggingImage:(NSImage *)wcDragImage at:(NSPoint)wcDragLoc operation:(NSDragOperation)op event:(NSEvent *)mouseDraggedEvent sourceIsDHTML:(BOOL)srcIsDHTML DHTMLWroteData:(BOOL)dhtmlWroteData
-{
-    WebHTMLView *topHTMLView = [self _topHTMLView];
-    if (self != topHTMLView) {
-        [topHTMLView _setMouseDownEvent:_private->mouseDownEvent];
-        BOOL result = [topHTMLView _startDraggingImage:wcDragImage at:wcDragLoc operation:op event:mouseDraggedEvent sourceIsDHTML:srcIsDHTML DHTMLWroteData:dhtmlWroteData];
-        [topHTMLView _setMouseDownEvent:nil];
-        return result;
-    }
-
-    NSPoint mouseDownPoint = [self convertPoint:[_private->mouseDownEvent locationInWindow] fromView:nil];
-    NSDictionary *element = [self elementAtPoint:mouseDownPoint allowShadowContent:YES];
-
-    NSURL *linkURL = [element objectForKey:WebElementLinkURLKey];
-    NSURL *imageURL = [element objectForKey:WebElementImageURLKey];
-    BOOL isSelected = [[element objectForKey:WebElementIsSelectedKey] boolValue];
-
-    NSPoint mouseDraggedPoint = [self convertPoint:[mouseDraggedEvent locationInWindow] fromView:nil];
-    
-    Page* page = core([self _webView]);
-    ASSERT(page);
-    DragController *dragController = page->dragController();
-    dragController->setDraggingImageURL(KURL());
-    dragController->setDragOperation((DragOperation)op);     // will be DragNone if WebCore doesn't care
-    
-    NSImage *dragImage = nil;
-    NSPoint dragLoc = { 0, 0 }; // quiet gcc 4.0 warning
-
-    // We allow WebCore to override the drag image, even if its a link, image or text we're dragging.
-    // This is in the spirit of the IE API, which allows overriding of pasteboard data and DragOp.
-    // We could verify that ActionDHTML is allowed, although WebCore does claim to respect the action.
-    if (wcDragImage) {
-        dragImage = wcDragImage;
-        // wcDragLoc is the cursor position relative to the lower-left corner of the image.
-        // We add in the Y dimension because we are a flipped view, so adding moves the image down.
-        if (linkURL)
-            // see HACK below
-            dragLoc = NSMakePoint(mouseDraggedPoint.x - wcDragLoc.x, mouseDraggedPoint.y + wcDragLoc.y);
-        else
-            dragLoc = NSMakePoint(mouseDownPoint.x - wcDragLoc.x, mouseDownPoint.y + wcDragLoc.y);
-        dragController->setDragOffset(IntPoint(wcDragLoc));
-    }
-    
-    WebView *webView = [self _webView];
-    NSPasteboard *pasteboard = [NSPasteboard pasteboardWithName:NSDragPboard];
-    BOOL startedDrag = YES;  // optimism - we almost always manage to start the drag
-
-    // note per kwebster, the offset arg below is always ignored in positioning the image
-    DOMNode *node = [element objectForKey:WebElementDOMNodeKey];
-    WebHTMLView *innerHTMLView = (WebHTMLView *)[[[[node ownerDocument] webFrame] frameView] documentView];
-    ASSERT([innerHTMLView isKindOfClass:[WebHTMLView class]]);
-    if (imageURL != nil
-            && [node isKindOfClass:[DOMElement class]]
-            && [(DOMElement *)node image]
-            && (dragController->dragSourceAction() & WebDragSourceActionImage)) {
-        id source = self;
-        if (!dhtmlWroteData) {
-            // Select the image when it is dragged. This allows the image to be moved via MoveSelectionCommandImpl and this matches NSTextView's behavior.
-            ASSERT(node != nil);
-            [webView setSelectedDOMRange:[[node ownerDocument] _createRangeWithNode:node] affinity:NSSelectionAffinityDownstream];
-            dragController->setDraggingImageURL(imageURL);
-            
-            WebArchive *archive;
-            
-            // If the image element comes from an ImageDocument, we don't want to 
-            // create a web archive from the image element.
-            if ([[self _bridge] canSaveAsWebArchive])
-                archive = [node webArchive];
-            else
-                archive = [WebArchiver archiveMainResourceForFrame:[self _frame]];
-            
-            source = [pasteboard _web_declareAndWriteDragImageForElement:(DOMElement *)node
-                                                                     URL:linkURL ? linkURL : imageURL
-                                                                   title:[element objectForKey:WebElementImageAltStringKey]
-                                                                 archive:archive
-                                                                  source:self];
-        }
-        [[webView _UIDelegateForwarder] webView:webView willPerformDragSourceAction:WebDragSourceActionImage fromPoint:mouseDownPoint withPasteboard:pasteboard];
-        if (dragImage == nil) {
-            NSPoint point = dragController->dragOffset();
-            [self _web_DragImageForElement:(DOMElement *)node
-                                      rect:[self convertRect:[[element objectForKey:WebElementImageRectKey] rectValue] fromView:innerHTMLView]
-                                     event:_private->mouseDownEvent
-                                pasteboard:pasteboard
-                                    source:source
-                                    offset:&point];
-            dragController->setDragOffset(IntPoint(point));
-        } else
-            [self dragImage:dragImage
-                         at:dragLoc
-                     offset:NSZeroSize
-                      event:_private->mouseDownEvent
-                 pasteboard:pasteboard
-                     source:source
-                  slideBack:YES];
-    } else if (linkURL && (dragController->dragSourceAction() & WebDragSourceActionLink)) {
-        if (!dhtmlWroteData) {
-            NSArray *types = [NSPasteboard _web_writableTypesForURL];
-            [pasteboard declareTypes:types owner:self];
-            [pasteboard _web_writeURL:linkURL andTitle:[element objectForKey:WebElementLinkLabelKey] types:types];            
-        }
-        [[webView _UIDelegateForwarder] webView:webView willPerformDragSourceAction:WebDragSourceActionLink fromPoint:mouseDownPoint withPasteboard:pasteboard];
-        if (dragImage == nil) {
-            dragImage = [self _dragImageForLinkElement:element];
-            NSSize offset = NSMakeSize([dragImage size].width / 2, -DRAG_LABEL_BORDER_Y);
-            dragLoc = NSMakePoint(mouseDraggedPoint.x - offset.width, mouseDraggedPoint.y - offset.height);
-            dragController->setDragOffset(IntPoint((int)offset.width, -(int)offset.height)); // height inverted because we are flipped
-        }
-        // HACK:  We should pass the mouseDown event instead of the mouseDragged!  This hack gets rid of
-        // a flash of the image at the mouseDown location when the drag starts.
-        [self dragImage:dragImage
-                     at:dragLoc
-                 offset:NSZeroSize
-                  event:mouseDraggedEvent
-             pasteboard:pasteboard
-                 source:self
-              slideBack:YES];
-    } else if (isSelected && (dragController->dragSourceAction() & WebDragSourceActionSelection)) {
-        if (!dhtmlWroteData)
-            [innerHTMLView _writeSelectionToPasteboard:pasteboard];
-        [[webView _UIDelegateForwarder] webView:webView willPerformDragSourceAction:WebDragSourceActionSelection fromPoint:mouseDownPoint withPasteboard:pasteboard];
-        if (dragImage == nil) {
-            dragImage = [innerHTMLView _selectionDraggingImage];
-            NSRect draggingRect = [self convertRect:[innerHTMLView _selectionDraggingRect] fromView:innerHTMLView];
-            dragLoc = NSMakePoint(NSMinX(draggingRect), NSMaxY(draggingRect));
-            dragController->setDragOffset(IntPoint((int)(mouseDownPoint.x - dragLoc.x),
-                                                   (int)(dragLoc.y - mouseDownPoint.y)));        // y inverted because we are flipped
-        }
-        [self dragImage:dragImage
-                     at:dragLoc
-                 offset:NSZeroSize
-                  event:_private->mouseDownEvent
-             pasteboard:pasteboard
-                 source:self
-              slideBack:YES];
-    } else if (srcIsDHTML) {
-        ASSERT(dragController->dragSourceAction() & WebDragSourceActionDHTML);
-        [[webView _UIDelegateForwarder] webView:webView willPerformDragSourceAction:WebDragSourceActionDHTML fromPoint:mouseDownPoint withPasteboard:pasteboard];
-        if (dragImage == nil) {
-            // WebCore should have given us an image, but we'll make one up
-            dragImage = Image::loadPlatformResource("missingImage")->getNSImage();
-            NSSize imageSize = [dragImage size];
-            dragLoc = NSMakePoint(mouseDownPoint.x - imageSize.width / 2, mouseDownPoint.y + imageSize.height / 2);
-            dragController->setDragOffset(IntPoint((int)(imageSize.width / 2), (int)(imageSize.height / 2)));
-        }
-        [self dragImage:dragImage
-                     at:dragLoc
-                 offset:NSZeroSize
-                  event:_private->mouseDownEvent
-             pasteboard:pasteboard
-                 source:self
-              slideBack:YES];
-    } else {
-        // Only way I know if to get here is if the original element clicked on in the mousedown is no longer
-        // under the mousedown point, so linkURL, imageURL and isSelected are all false/nil.
-        startedDrag = NO;
-    }
-    return startedDrag;
-}
-
 - (void)_handleAutoscrollForMouseDragged:(NSEvent *)event 
 { 
     [self autoscroll:event]; 
